2012-08-31  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tabs/tab.jl: add support for coloring a window-title
	in a different color, when a window is marked for tabbing [fuchur]

	* themes/StyleTab/theme.jl: color window-title in a different color,
	when a window is marked for tabbing [fuchur]

	* themes/StyleTab/{Default,Glass,Reduce,Smoothly,WixDa}: updated
	image-sets for StyleTab [fuchur]

	* man/news.texi: updated

	* Makefile.in: also remove NEWS and config.h.in upon gitclean

	* install-sh: updated to 2011-01-19.21

2012-08-30  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tabs/tabgroup.jl: support for sticky-workspace and
	sticky-viewport in tabs. [fuchur]

2012-08-29  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tabs/tab.jl: remember default cursor [fuchur]

	* lisp/sawfish/wm/tabs/tabgroup.jl: when one of the tabbed windows is
	sticky and moved by selecting the first tab, it causes a crash. This
	is fixed now. [fuchur]

2012-08-28  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/tabs/tab.jl: allow a whole tabgroup to be added to
	another tabgroup (or a single) window. [fuchur]

	* lisp/sawfish/wm/keymaps.jl: bind tabgroup-add-to-group to
	'C-Button2-Off' in titlebar/tabbar-keymap. [fuchur]

	* lisp/sawfish/wm/tabs/tabgroup.jl: various bugfixes in raising,
	stickying, move-resizeing and tab-index. [fuchur]

	* lisp/sawfish/wm/tabs/tab.jl
	* lisp/sawfish/wm/tabs/tabgroup.jl: only allow
	'_NET_WM_WINDOW_TYPE_NORMAL to be marked as a tabbed window. [fuchur]

	* man/news.texi: update

2012-08-27  Christopher Roy Bratusek <nano@tuxfamily.org>
	* Makedefs.in: include $(repexecdir)/rules.mk as first,
	so that --prefix & co. from configure don't get overwritten.
	[Allin Cottrell]

	* man/news.texi: update

2012-08-23  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/util/marks.jl: removed [fuchur]

	* lisp/sawfish/wm/tabs/tab.jl: implement mark-window here,