@@ -1,3 +1,7 @@
+2012-09-04  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/state/transient.jl: make decorate-transients a
+	defcustom.
+
 2012-08-31  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/tabs/tab.jl: add support for coloring a window-title
 	in a different color, when a window is marked for tabbing [fuchur]
